[gd_scene load_steps=4 format=2]

[ext_resource path="res://OnFootAssets/Player/Build/Bullet.png" type="Texture" id=1]
[ext_resource path="res://OnFootAssets/Village/VillageBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="VillageBullet" type="Area2D"]
collision_layer = 0
collision_mask = 18
script = ExtResource( 2 )
speed = 300

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -1, -1, 2, 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_VillageBullet_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_VillageBullet_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
